correcao de code smells e bugs